GitHub Pull Requests and Issues

--- a/force-app/main/default/classes/AccountController.cls
+++ b/force-app/main/default/classes/AccountController.cls
@@ -1,7 +1,10 @@
 public with sharing class AccountController {
+
     @AuraEnabled(cacheable=true)
     public static List<Account> getAccountList() {
-        return [SELECT Id, Name FROM Account WITH SECURITY_ENFORCED LIMIT 10];
+        //String userId = UserInfo.getUserId();
+        List<Account> accountList = [SELECT Id, Name, Status_of_Account__c, Account_Representative__c FROM Account WHERE OwnerId=:UserInfo.getUserId()] ;
+        return accountList;
     }
 
     @AuraEnabled(cacheable=true)
